welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: not found: value lettre
	lettre match {
        ^